# server.js
@@ -7,6 +7,7 @@ const authRoutes = require("./routes/authRoutes");
 const partnerRoutes = require("./routes/partnersRoutes");
 const serviceRoutes = require("./routes/servicesRoutes");
 const teamRoutes = require("./routes/teamRoutes");
+const faqRoutes = require("./routes/faqsRoutes");
 
 const app = express();
 app.use(express.json());
@@ -21,6 +22,7 @@ app.use("/api/auth", authRoutes);
 app.use("/api/partners", partnerRoutes);
 app.use("/api/services", serviceRoutes);
 app.use("/api/team", teamRoutes);
+app.use("/api/faqs", faqRoutes);
 
 // Start server
 const PORT = process.env.PORT || 4000;
